package switchisep.project.dto;

import java.time.LocalDate;

public class SprintDTO {
    /**
     * Sprint Identification.
     */
    public int sprintID;
    /**
     * chronological order of sprint.
     */
    public int numberOfWeeks;
    /**
     * weeks duration of sprint.
     */
    public LocalDate startDate;
    /**
     * start date of sprint.
     */
    public LocalDate endDate;
    /**
     * end date of sprint.
     */
    public int sprintOrder;

    public String projectCode;



}
